src/Components/LoginBox/LoginBox.css
.login-box {
    position: relative;
    width: 20em;
    height: 20em;
    color: white;
    background: #2c6c8f;
    border-radius: 50px;
    border: 18px solid #1f5474;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

}

h2{
    margin-top:10px;
    margin-bottom: 20px;
}

input {
    padding: 8px 40px 8px;
    margin-left: 30px;
    border: 1px solid #ccc;
    border-radius: 50px;
}

input:focus {
    outline-color: rgb(28, 121, 121);
}

.input-box {
    margin: 10px;
    font-size: 9pt;
    font-weight: 600;
}

.remember-forgot {
    margin: 0px 0px 10px 70px;
    font-style: italic;
    font-size: 12px;
    display: flex;
}

.forgot {
    padding-left: 50px;
}

button {
    margin: 40px 0px 10px 150px;
    display: flex;
    padding: 8px 65px;
    background-color: white;
    border-radius: 50px;
    font-weight: 600;
    border: 3px solid;
    border-color: rgb(255, 165, 9)  rgba(5, 163, 181, 0.782)  rgba(5, 163, 181, 0.782) rgb(255, 165, 9) ;
    cursor: pointer;
    color: black;
    background: white;
    transition: background-color 0.3s ease;
}

.login-title{
    margin-bottom: 20px;
    font-size: 50px;
}

 

@media (max-width: 768px) {
    .login-box {
        width: 100%;
        height: 100%;
        overflow: hidden;
    }
}
 

